accessed API and saved info locally and created test search

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script> <!--the defer makes scripts run after page load-->
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" defer></script>                <!--this keeps all linked things in one place-->
+    <script src="./assets/js/script.js" defer></script>
     <title>Workout App</title>
 <!-- MVP = IMPORTANT TASK -->
 <!-- NP = NON-PRIORITY -->
@@ -67,6 +70,6 @@
     <footer>
         <!-- our names maybe? IDK something fun -->
     </footer>
-    <script src="script.js"></script>
+    
 </body>
 </html>
