named buttons and change color upon click

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header class="">WorkOut Planner</header>                   <!-- Some sort of Jumbotron? -->
     <main class="">
         <section id="type-workout" class="">                    <!-- MVP TASK -->
-            <button id="upper" class=""></button>               <!-- Once one of these are clicked they will change background color or something to indicate  -->
-            <button id="lower" class=""></button>               <!-- the choice. If another button is clicked the initial button will be changed back to normal  -->
-            <button id="full" class=""></button>                <!-- background and new button will change -->
-            <button id="create" class=""></button>              
+            <button id="create" class="">Create</button>              
+            <button id="upper" class="">Upper</button>               <!-- Once one of these are clicked they will change background color or something to indicate  -->
+            <button id="lower" class="">Lower</button>               <!-- the choice. If another button is clicked the initial button will be changed back to normal  -->
+            <button id="full" class="">Full</button>                <!-- background and new button will change -->
         </section>
         <section id="time-workout" class="">                        <!-- NON-PRIORITY -->
                 <button id="min-20" class=""></button>              <!-- This section appears after one of the typeWorkout buttons have been clicked -->
