--- a/index.html
+++ b/index.html
@@ -84,25 +84,21 @@
                         <div id="lower-filter" class=""></div>
                         <div id="lowback/abs-filter" class=""></div> 
                     </div>                    <!-- NP: Gotta check if this is available with API or manually create list -->    
-                    <div id="muscle-types" class="">
-                        <div id="upper-muscles" class="pure-g pure-u-1-3">
-                            <div id="pecs" class=""></div>
-                            <div id="biceps" class=""></div>
-                            <div id="triceps" class=""></div>
-                            <div id="shoulders" class=""></div>
-                            <div id="lats" class=""></div>
-                            <div id="traps" class=""></div>
-                        </div>         
-                        <div id="lower-muscles" class="pure-g pure-u-1-3">
-                            <div id="quads" class=""></div>
-                            <div id="hamstrings" class=""></div>
-                            <div id="glutes" class=""></div>
-                            <div id="calves" class=""></div>
-                        </div>
-                        <div id="abs-lowback-muscles" class="">
-                            <div id="abs" class=""></div>
-                            <div id="spine" class=""></div>
-                        </div>                     
+                    <div id="muscle-types" class="pure-g pure-u-1-3">
+                        <input class="modal-state" id="pecs" id="modal-1" type="checkbox" />
+                        <input class="modal-state" id="modal-1" id="biceps" type="checkbox" />
+                        <input class="modal-state" id="modal-1" id="triceps" type="checkbox" />
+                        <input class="modal-state" id="modal-1" id="shoulders" type="checkbox" />
+                        <input class="modal-state" id="modal-1" id="lats" type="checkbox" />
+                        <input class="modal-state" id="modal-1" id="traps" type="checkbox" />
+
+                        <input class="modal-state" id="modal-1" id="quads" type="checkbox" />
+                        <input class="modal-state" id="modal-1" id="hamstrings" type="checkbox" />
+                        <input class="modal-state" id="modal-1" id="glutes" type="checkbox" />
+                        <input class="modal-state" id="modal-1" id="calves" type="checkbox" />
+
+                        <input class="modal-state" id="modal-1" id="abs" type="checkbox" />
+                        <input class="modal-state" id="modal-1" id="spine" type="checkbox" />
                     </div>        
                 </div>                                          
                 <div id="filter-btns" class="">
