--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                         <div id="lowback/abs-filter" class=""></div> 
                     </div>                    <!-- NP: Gotta check if this is available with API or manually create list -->    
                     <div id="muscle-types" class="pure-g pure-u-1-3">
-                        <input class="modal-state" id="pecs" id="modal-1" type="checkbox" />
-                        <input class="modal-state" id="modal-1" id="biceps" type="checkbox" />
-                        <input class="modal-state" id="modal-1" id="triceps" type="checkbox" />
-                        <input class="modal-state" id="modal-1" id="shoulders" type="checkbox" />
-                        <input class="modal-state" id="modal-1" id="lats" type="checkbox" />
+                        <input class="modal-state modal-1" id="pecs" type="checkbox" />
+                        <input class="modal-state modal-1" id="biceps" type="checkbox" />
+                        <input class="modal-state modal-1" id="triceps" type="checkbox" />
+                        <input class="modal-state modal-1" id="shoulders" type="checkbox" />
+                        <input class="modal-state modal-1" id="lats" type="checkbox" />
                         <input class="modal-state" id="modal-1" id="traps" type="checkbox" />
 
                         <input class="modal-state" id="modal-1" id="quads" type="checkbox" />
