--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
                         <label for="traps"><input class="modal-state" class="modal-1" id="traps" value="traps" type="checkbox" />Traps</label>
 
 
-                        <label for="quads"><input class="modal-state" class="modal-1" id="quads" value="quads" type="checkbox" />Quads</label>
-                        <label for="hamstrings"><input class="modal-state" class="modal-1" id="hamstrings" value="hamstrings" type="checkbox" />Hamstrings</label>
-                        <label for="glutes"><input class="modal-state" class="modal-1" id="glutes" value="glutes" type="checkbox" />Glutes</label>
-                        <label for="calves"><input class="modal-state" class="modal-1" id="calves" type="checkbox" />Calves</label>
+                        <label for="quads"><input class="modal-state modal-1" id="quads" value="quads" type="checkbox" />Quads</label>
+                        <label for="hamstrings"><input class="modal-state modal-1" id="hamstrings" value="hamstrings" type="checkbox" />Hamstrings</label>
+                        <label for="glutes"><input class="modal-state modal-1" id="glutes" value="glutes" type="checkbox" />Glutes</label>
+                        <label for="calves"><input class="modal-state modal-1" id="calves" type="checkbox" />Calves</label>
                         
-                        <label for="abs"><input class="modal-state" class="modal-1" id="abs" type="checkbox" />Abs</label>
-                        <label for="spine"><input class="modal-state" class="modal-1" id="spine" type="checkbox" />Spine</label>
+                        <label for="abs"><input class="modal-state modal-1" id="abs" type="checkbox" />Abs</label>
+                        <label for="spine"><input class="modal-state modal-1" id="spine" type="checkbox" />Spine</label>
                     </div>        
                 </div>                                          
                 <div id="filter-btns" class="">
