--- a/index.html
+++ b/index.html
@@ -85,31 +85,22 @@
                         <div id="lowback/abs-filter" class=""></div> 
                     </div>                    <!-- NP: Gotta check if this is available with API or manually create list -->    
                     <div id="muscle-types" class="pure-g pure-u-1-3">
-<<<<<<< HEAD
-                        <label for="pecs"><input class="modal-state modal-1" id="pecs" value="pectorals" type="checkbox" />Pecs</label>
-                        <label for="biceps"><input class="modal-state modal-1" id="biceps" value="biceps" type="checkbox" />Biceps</label>
-                        <label for="triceps"><input class="modal-state modal-1" id="triceps" value="triceps" type="checkbox" />Triceps</label>
-                        <label for="delts"><input class="modal-state modal-1" id="shoulders" value="delts" type="checkbox" />Shoulders</label>
-                        <label for="lats"><input class="modal-state modal-1" id="lats" value="lats" type="checkbox" />Lats</label>
-                        <label for="traps"><input class="modal-state modal-1" id="traps" value="traps" type="checkbox" />Traps</label>
-=======
 
-                        <label for="pecs"><input class="modal-state" class="modal-1" id="pecs" value="pectorals" type="checkbox" />Pecs</label>
-                        <label for="biceps"><input class="modal-state" class="modal-1" id="biceps" value="biceps" type="checkbox" />Biceps</label>
-                        <label for="triceps"><input class="modal-state" class="modal-1" id="triceps" value="triceps" type="checkbox" />Triceps</label>
-                        <label for="delts"><input class="modal-state" class="modal-1" id="shoulders" value="delts" type="checkbox" />Shoulders</label>
-                        <label for="lats"><input class="modal-state" class="modal-1" id="lats" value="lats" type="checkbox" />Lats</label>
-                        <label for="traps"><input class="modal-state" class="modal-1" id="traps" value="traps" type="checkbox" />Traps</label>
->>>>>>> dev
+                        <label for="pecs"><input class="modal-state modal-1" id="pecs" value="pectorals" type="checkbox" />Pecs</label>
+                        <label for="biceps"><input class="modal-state modal-1" class="modal-1" id="biceps" value="biceps" type="checkbox" />Biceps</label>
+                        <label for="triceps"><input class="modal-state modal-1" class="modal-1" id="triceps" value="triceps" type="checkbox" />Triceps</label>
+                        <label for="delts"><input class="modal-state modal-1" class="modal-1" id="shoulders" value="delts" type="checkbox" />Shoulders</label>
+                        <label for="lats"><input class="modal-state modal-1" class="modal-1" id="lats" value="lats" type="checkbox" />Lats</label>
+                        <label for="traps"><input class="modal-state modal-1" class="modal-1" id="traps" value="traps" type="checkbox" />Traps</label>
 
 
                         <label for="quads"><input class="modal-state modal-1" id="quads" value="quads" type="checkbox" />Quads</label>
                         <label for="hamstrings"><input class="modal-state modal-1" id="hamstrings" value="hamstrings" type="checkbox" />Hamstrings</label>
                         <label for="glutes"><input class="modal-state modal-1" id="glutes" value="glutes" type="checkbox" />Glutes</label>
-                        <label for="calves"><input class="modal-state modal-1" id="calves" type="checkbox" />Calves</label>
+                        <label for="calves"><input class="modal-state modal-1" id="calves" value="calves" type="checkbox" />Calves</label>
                         
-                        <label for="abs"><input class="modal-state modal-1" id="abs" type="checkbox" />Abs</label>
-                        <label for="spine"><input class="modal-state modal-1" id="spine" type="checkbox" />Spine</label>
+                        <label for="abs"><input class="modal-state modal-1" id="abs" value="abs" type="checkbox" />Abs</label>
+                        <label for="spine"><input class="modal-state modal-1" id="spine" value="spine" type="checkbox" />Spine</label>
                     </div>        
                 </div>                                          
                 <div id="filter-btns" class="">
