changed js var test -> currentWorkoutList

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <!-- Exercises placed here using JS -->
                 </ul>                                          
             </div>
-            <div id="final-buttons" class="pure-g pure-u-1">                   <!-- MVP -->
+            <div id="final-buttons" class="hide pure-g pure-u-1">                   <!-- MVP -->
                 <button id="clearbtn" class="pure-button">Clear</button>           <!-- Removes all exercise options and choices clicked. Reverts back to the starting page -->
                 <button id="addbtn" class="button-secondary pure-button">Add</button>       <!-- modal pops up with options to add a single or multiple new exercises -->
                 <button id="submitbtn" class="button-secondary pure-button">Submit</button> <!-- Hides "type-workout", "time-workout" and "workout-questions" for a clean look. saves to local -->
