--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         </section>
 
         <!-- MODAL SECTION -->                                  <!-- MVP -->
-        <div class = "container">
-            <section id="exercise-modal" class="pure-g">                  
+        <div class = "hide modal container">
+            <section id="exercise-modal" class="pure-g"> 
+                <button id="closeModal">X</button>                 
                 <form id="search-bar" class="pure-g pure-u-1-3">                    
                     <input type="text" id="text-bar" class=""> 
                     <h4>Filter Muscles</h4>
@@ -68,12 +69,12 @@
                     <ul id="exercise-list" class="">                <!-- Going to present the exercises we can choose from with a scrollbar to the side --><!-- if exercise is clicked on it will change to indicate choice -->
                     </ul>
                 </div>      
-                <div id= "modal-btns">
-                    <!-- <button id="reset-btn" class="">Reset Filters</button> -->
+                <!-- <div id= "modal-btns">
+                     <button id="reset-btn" class="">Reset Filters</button>
                     <button id="clearmodal-btn" class="">Clear Exercises</button>                                        
                     <button id="modal-add" class="">Submit Exercises</button>           
                     <button id="exit" class="">Exit</button> 
-                </div>
+                </div> -->
             </section>
         </div>
     <footer>
