--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <input type="text" id="text-bar" class=""> 
                     <h4>Filter Muscles</h4>
                         <div id="muscle-types" class="pure-g pure-u-1">
-                            <input type="radio" name="muscles" class="" id="pecs" value="pectorals" checked/><label for="pecs">Pecs</label> <br>
+                            <input type="radio" name="muscles" class="" id="pecs" value="pectorals" /><label for="pecs">Pecs</label> <br>
                             <input type="radio" name="muscles" class="" id="biceps" value="biceps"/><label for="biceps">Biceps</label> <br>
                             <input type="radio" name="muscles" class="" id="triceps" value="triceps"/><label for="triceps">Triceps</label> <br>
                             <input type="radio" name="muscles" class="" id="shoulders" value="delts"/><label for="delts">Shoulders</label> <br>
@@ -69,7 +69,8 @@
                 </form>
                 <div id="exercises" class="pure-u-2-3">                       
                     <h5>Exercises</h5>
-                    <ul id="exercise-list" class="">                <!-- Going to present the exercises we can choose from with a scrollbar to the side --><!-- if exercise is clicked on it will change to indicate choice -->
+                    <ul id="exercise-list" class="">    
+                        <li>test</li>            <!-- Going to present the exercises we can choose from with a scrollbar to the side --><!-- if exercise is clicked on it will change to indicate choice -->
                     </ul>
                 </div>      
                 <!-- <div id= "modal-btns">
