--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div id="exercises" class="pure-u-2-3">                       
                     <h5>Exercises</h5>
                     <ul id="exercise-list" class="">    
-                        <li>test</li>            <!-- Going to present the exercises we can choose from with a scrollbar to the side --><!-- if exercise is clicked on it will change to indicate choice -->
+                                  <!-- Going to present the exercises we can choose from with a scrollbar to the side --><!-- if exercise is clicked on it will change to indicate choice -->
                     </ul>
                 </div>      
                 <!-- <div id= "modal-btns">
