responsiveness done, finished quote, added print

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             </section>
             <h3>Choose a Setting Above to Get Started!</h3>
         </section>
-        <section id="work-out-plan" class="pure-g">
-            <div id="chosen-exercises" class="pure-g">    
-                <ul id="chosen-list" class="pure-g">
+        <section id="work-out-plan" class="">
+            <div id="chosen-exercises" class="">    
+                <div id="chosen-list" class="pure-g">
                     <!-- Exercises placed here using JS -->
-                </ul>                                          
+                </div>                                          
             </div>
             <div id="final-buttons" class="hide pure-g pure-u-1">                   
                 <button id="clearbtn" class="pure-button">Clear</button>           
@@ -42,6 +42,7 @@
             </div>       
             <div id="after-submit" class="hide pure-g pure-u-1">
                 <button id="revertbtn" class="button-secondary pure-button">Revert</button>
+                <button id="printbtn" class="button-secondary pure-button">Print</button>
             </div>  
         </section>
 
